# job_seeking_webpage

./: .cursorrules  .gitignore  PHASE1B_RESTRUCTURING_SUMMARY.txt  README.md  analyze_specializations.py  analyze_subjects.py  check_html_raw.py  check_spec.py  debug_html.py  index.html  job-seeking-webpage.code-workspace  pyproject.toml  read_it.md  requirements.txt  run_pilot_replacement.py  simple_debug.py  test_aea_fix.py  test_predefined_urls.py  validate_replacements.py
conversation_cursor/2025-12-31/: summary.md
conversation_cursor/github/: gh-pages.yml
conversation_cursor/progress/: 2026-01-04_file-organization-summary.md  2026-01-04_phase1b-restructuring-summary.md  2026-01-04_phase1b-work-log.md  latest.md
conversation_cursor/structure/: latest.md
conversation_cursor/to-do-list/: 2025-12-31_load-data-collection.md  2025-12-31_project-setup.md  2025-12-31_task.md  2026-01-01_transform-data-processing.md  2026-01-02_improve-data-quality.md  2026-01-03_export-output-generation.md  2026-01-04_expand-scraping-sources.md  2026-01-04_task-0c-config-restructure.md  latest.md
data/config/: README.md  URL_VERIFICATION_RESULTS.md  processing_rules.json  scraping_rules.json  scraping_sources.json  scraping_sources.json.backup  scraping_sources_accessible.json  universities.json  url_replacements.json
data/processed/: DIAGNOSTIC_ANALYSIS.md
docs/: INIT_FILES_EXPLAINED.md  SCRAPING_GUIDE.md
environment/: README.md
environment/python/: envs.toml
scripts/generator/: __init__.py  build_site.py  (+1 more)
static/: index.html
templates/: index.html.jinja
(+217 files in other folders)
