[project]
name = "job-seeking-webpage"
version = "0.1.0"
description = "Daily updated economics faculty job aggregator"
authors = [
    {name = "clioh"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
