[tool.poetry]
name = "job-seeking-webpage"
version = "0.1.0"
description = "Daily updated economics faculty job aggregator"
authors = ["clioh"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.14.3"
requests = "^2.32.5"
lxml = "^6.0.2"
selenium = "^4.39.0"
pandas = "^2.3.3"
python-dateutil = "^2.9.0"
jinja2 = "^3.1.6"
schedule = "^1.2.2"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
